@@ -6,6 +6,9 @@
 #' @section Aesthetics:
 #' \Sexpr[results=rd,stage=build]{ggplot2:::rd_aesthetics("geom", "linerange")}
 #'
+#' @param fatten A multiplicative factor used to increased the size of the
+#'   middle bar in \code{geom_crossbar()} and the middle point in
+#'   \code{geom_pointrange()}.
 #' @seealso
 #'  \code{\link{stat_summary}} for examples of these guys in use,
 #'  \code{\link{geom_smooth}} for continuous analog
